{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 101,
  "lineage": "a4f39a1c-55de-e1ca-772a-6ece590a1fc3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "per_ip_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "10.0.0.5",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkInterfaces/10.0.0.5-nic",
            "internal_domain_name_suffix": "uifbf322nphurpc00210geaxwc.wawx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/publicIPAddresses/frontend-ip",
                "subnet_id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/virtualNetworks/petclinic-vnet/subnets/petclinic-default-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "polandcentral",
            "name": "10.0.0.5-nic",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "petclinic-rg"
          },
          "dependencies": [
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_public_ip.angular-frontend-ip",
            "azurerm_resource_group.petclinic-rg",
            "azurerm_subnet.petclinic-default-subnet",
            "azurerm_virtual_network.petclinic-vnet"
          ]
        },
        {
          "index_key": "10.0.0.6",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkInterfaces/10.0.0.6-nic",
            "internal_domain_name_suffix": "uifbf322nphurpc00210geaxwc.wawx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/virtualNetworks/petclinic-vnet/subnets/petclinic-default-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "polandcentral",
            "name": "10.0.0.6-nic",
            "private_ip_address": "10.0.0.6",
            "private_ip_addresses": [
              "10.0.0.6"
            ],
            "resource_group_name": "petclinic-rg"
          },
          "dependencies": [
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_public_ip.angular-frontend-ip",
            "azurerm_resource_group.petclinic-rg",
            "azurerm_subnet.petclinic-default-subnet",
            "azurerm_virtual_network.petclinic-vnet"
          ]
        },
        {
          "index_key": "10.0.0.8",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkInterfaces/10.0.0.8-nic",
            "internal_domain_name_suffix": "uifbf322nphurpc00210geaxwc.wawx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.8",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/virtualNetworks/petclinic-vnet/subnets/petclinic-default-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "polandcentral",
            "name": "10.0.0.8-nic",
            "private_ip_address": "10.0.0.8",
            "private_ip_addresses": [
              "10.0.0.8"
            ],
            "resource_group_name": "petclinic-rg"
          },
          "dependencies": [
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_public_ip.angular-frontend-ip",
            "azurerm_resource_group.petclinic-rg",
            "azurerm_subnet.petclinic-default-subnet",
            "azurerm_virtual_network.petclinic-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "per_ip_network_interface_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "10.0.0.5",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkInterfaces/10.0.0.5-nic|/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.5",
            "network_interface_id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkInterfaces/10.0.0.5-nic",
            "network_security_group_id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.5"
          },
          "dependencies": [
            "azurerm_network_interface.per_ip_network_interface",
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_public_ip.angular-frontend-ip",
            "azurerm_resource_group.petclinic-rg",
            "azurerm_subnet.petclinic-default-subnet",
            "azurerm_virtual_network.petclinic-vnet"
          ]
        },
        {
          "index_key": "10.0.0.6",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkInterfaces/10.0.0.6-nic|/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.6",
            "network_interface_id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkInterfaces/10.0.0.6-nic",
            "network_security_group_id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.6"
          },
          "dependencies": [
            "azurerm_network_interface.per_ip_network_interface",
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_public_ip.angular-frontend-ip",
            "azurerm_resource_group.petclinic-rg",
            "azurerm_subnet.petclinic-default-subnet",
            "azurerm_virtual_network.petclinic-vnet"
          ]
        },
        {
          "index_key": "10.0.0.8",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkInterfaces/10.0.0.8-nic|/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.8",
            "network_interface_id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkInterfaces/10.0.0.8-nic",
            "network_security_group_id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.8"
          },
          "dependencies": [
            "azurerm_network_interface.per_ip_network_interface",
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_public_ip.angular-frontend-ip",
            "azurerm_resource_group.petclinic-rg",
            "azurerm_subnet.petclinic-default-subnet",
            "azurerm_virtual_network.petclinic-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "per_ip_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "10.0.0.5",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.5",
            "location": "polandcentral",
            "name": "nsg-10.0.0.5",
            "resource_group_name": "petclinic-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.petclinic-rg"
          ]
        },
        {
          "index_key": "10.0.0.6",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.6",
            "location": "polandcentral",
            "name": "nsg-10.0.0.6",
            "resource_group_name": "petclinic-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.petclinic-rg"
          ]
        },
        {
          "index_key": "10.0.0.8",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.8",
            "location": "polandcentral",
            "name": "nsg-10.0.0.8",
            "resource_group_name": "petclinic-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.petclinic-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "per_ip_and_port_security_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "10.0.0.5-4200",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "4200",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.5/securityRules/4200-Allow",
            "name": "4200-Allow",
            "network_security_group_name": "nsg-10.0.0.5",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "petclinic-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_resource_group.petclinic-rg"
          ]
        },
        {
          "index_key": "10.0.0.6-9966",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "9966",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.6/securityRules/9966-Allow",
            "name": "9966-Allow",
            "network_security_group_name": "nsg-10.0.0.6",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "petclinic-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_resource_group.petclinic-rg"
          ]
        },
        {
          "index_key": "10.0.0.8-3306",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.8/securityRules/3306-Allow",
            "name": "3306-Allow",
            "network_security_group_name": "nsg-10.0.0.8",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "petclinic-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_resource_group.petclinic-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "per_ip_ssh_security_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "10.0.0.5",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.5/securityRules/SSHAllow",
            "name": "SSHAllow",
            "network_security_group_name": "nsg-10.0.0.5",
            "priority": 999,
            "protocol": "Tcp",
            "resource_group_name": "petclinic-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_resource_group.petclinic-rg"
          ]
        },
        {
          "index_key": "10.0.0.6",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.6/securityRules/SSHAllow",
            "name": "SSHAllow",
            "network_security_group_name": "nsg-10.0.0.6",
            "priority": 999,
            "protocol": "Tcp",
            "resource_group_name": "petclinic-rg",
            "source_address_prefix": "10.0.0.5",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_resource_group.petclinic-rg"
          ]
        },
        {
          "index_key": "10.0.0.8",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-10.0.0.8/securityRules/SSHAllow",
            "name": "SSHAllow",
            "network_security_group_name": "nsg-10.0.0.8",
            "priority": 999,
            "protocol": "Tcp",
            "resource_group_name": "petclinic-rg",
            "source_address_prefix": "10.0.0.5",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.per_ip_security_group",
            "azurerm_resource_group.petclinic-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "angular-frontend-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/publicIPAddresses/frontend-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.248.138.47",
            "ip_version": "IPv4",
            "location": "polandcentral",
            "name": "frontend-ip",
            "resource_group_name": "petclinic-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.petclinic-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "petclinic-default-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/25"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/virtualNetworks/petclinic-vnet/subnets/petclinic-default-subnet",
            "name": "petclinic-default-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "petclinic-rg",
            "virtual_network_name": "petclinic-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.petclinic-rg",
            "azurerm_virtual_network.petclinic-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "petclinic-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f7120aa2-6b9c-48cf-bc5a-d737a31017b2",
            "id": "/subscriptions/fc0e9975-4f2e-4889-ba20-bb58c374fba1/resourceGroups/petclinic-rg/providers/Microsoft.Network/virtualNetworks/petclinic-vnet",
            "location": "polandcentral",
            "name": "petclinic-vnet",
            "resource_group_name": "petclinic-rg"
          },
          "dependencies": [
            "azurerm_resource_group.petclinic-rg"
          ]
        }
      ]
    }
  ]
}